tdf#164428 Skia/Metal needs flush after drawing progress bar

Also, move much of the duplicate code in the two AquaSalFrame::Flush()
methods into a new AquaSalFrame::doFlush() method.

Change-Id: I59f597692b7d5bc3035181681b2af8349c9812b2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179376
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>