vcl/osx/salframeview.mm
@@ -971,7 +971,7 @@ static bool isMouseScrollWheelEvent( NSEvent *pEvent )
 
         // tdf#155266 force flush after scrolling
         if (nButton == MOUSE_LEFT && nEvent == SalEvent::MouseMove)
-            mpFrame->mbForceFlush = true;
+            mpFrame->mbForceFlushScrolling = true;
     }
 }
 
@@ -1214,7 +1214,7 @@ static bool isMouseScrollWheelEvent( NSEvent *pEvent )
         }
 
         // tdf#155266 force flush after scrolling
-        mpFrame->mbForceFlush = true;
+        mpFrame->mbForceFlushScrolling = true;
     }
 }
 
@@ -1294,7 +1294,7 @@ static bool isMouseScrollWheelEvent( NSEvent *pEvent )
         }
 
         // tdf#155266 force flush after scrolling
-        mpFrame->mbForceFlush = true;
+        mpFrame->mbForceFlushScrolling = true;
     }
 }
 
